--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ header {
 .insta {
   width: 75px;
   height: 75px;
-  background-image: url("../img/fb-icon.PNG");
+  background-image: url("../img/insta-icon.PNG");
   background-repeat: no-repeat;
   background-position: center;
 }
